# FaceDectionTensorRTInference

./: CMakeLists.txt  README.md  face_detector.cu
